--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,13 @@
-# Editor configuration, see https://editorconfig.org
+# https://editorconfig.org
 root = true
 
 [*]
-charset = utf-8
 indent_style = space
 indent_size = 2
-insert_final_newline = true
+charset = utf-8
+end_of_line = lf
 trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.md]
 max_line_length = off
