--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,27 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/config.dev.js",
-    "build": "webpack --config webpack/config.prod.js"
+    "build": "webpack --config webpack/webpack.prod.js",
+    "start": "webpack-dev-server --config webpack/webpack.dev.js"
   },
+  "browserslist": [
+    "defaults"
+  ],
   "dependencies": {
     "mithril": "^2.0.4"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2",
