--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@types/dotenv": "^6.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.7.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
