--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "trailingComma": "es5"
   },
   "lint-staged": {
-    "*.{js,html,scss,json}": [
+    "*.{js,ts,html,scss,json}": [
       "prettier --write",
+      "git add"
+    ],
+    "*.ts": [
+      "tslint --fix",
       "git add"
     ]
   },
