--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "format": "prettier --write '**/*.{js,ts,html,scss,json}'",
     "client": "yarn workspace @votely/client",
-    "server": "yarn workspace @votely/server"
+    "server": "yarn workspace @votely/server",
+    "start": "concurrently -k 'yarn:server start:dev' 'yarn:client start'"
   },
   "prettier": {
     "printWidth": 100,
@@ -36,6 +37,7 @@
     }
   },
   "devDependencies": {
+    "concurrently": "^5.0.0",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2"
