feat(server): express-session + mongo session storage

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "all"
   },
   "lint-staged": {
     "*.{js,ts,html,scss,json}": [
