--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,10 @@
     "@nestjs/platform-express": "^6.8.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
+    "connect-mongo": "^3.1.2",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
+    "express-session": "^1.17.0",
     "mongoose": "^5.7.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -37,6 +39,7 @@
     "@nestjs/testing": "^6.8.5",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.5.28",
     "@types/node": "^12.7.5",
