--- a/client-vue/package.json
+++ b/client-vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client-vue",
-  "version": "0.1.0",
+  "name": "@votely/client-vue",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
